@startuml

'--------------'
'Hidden members'
'--------------'
hide empty members

'----'
'Move'
'----'
abstract class PieceType {
    - color
    - hasBeenKickedOffTheBoard
    - isBeingPromoted
    + getName()
    + getNextPawnPromotion()
    + getValue()
    + isValidMove()
    + setPieceTypeSpecificAttributes()
}

class Queen {
    - {static} queenIsValidMoveRulesEngine
}

class IsValidMoveParameter {
    - chessboard
    - from
    - to
    - isOpponent
}

interface RulesEngine {
    - rules
    + addRule()
    + process()
}

interface Rule {
    + isApplicable()
    + getResult()
}

'---------'
'Relations'
'---------'
PieceType <|-down- Queen
Queen *-- QueenIsValidMoveRulesEngine
QueenIsValidMoveRulesEngine -up-|> RulesEngine
QueenIsValidMoveRulesEngine .left[#blue].> IsValidMoveParameter

HasEmptyParametersRule -up-* QueenIsValidMoveRulesEngine
IsFriendlyFireRule -up-* QueenIsValidMoveRulesEngine
IsJumpingRule -up-* QueenIsValidMoveRulesEngine
IsMovingIntoCheckRule -up-* QueenIsValidMoveRulesEngine
QueenIsValidBasicMoveRule -up-* QueenIsValidMoveRulesEngine
IsNotAValidMoveRule -up-* QueenIsValidMoveRulesEngine

HasEmptyParametersRule -down[#purple]-|> Rule
IsFriendlyFireRule -down[#purple]-|> Rule
IsJumpingRule -down[#purple]-|> Rule
IsMovingIntoCheckRule -down[#purple]-|> Rule
QueenIsValidBasicMoveRule -down[#purple]-|> Rule
IsNotAValidMoveRule -down[#purple]-|> Rule

HasEmptyParametersRule -down[#green]-|> PieceTypeSharedRules
IsFriendlyFireRule -down[#green]-|> PieceTypeSharedRules
IsJumpingRule -down[#green]-|> PieceTypeSharedRules
IsMovingIntoCheckRule -down[#green]-|> PieceTypeSharedRules
QueenIsValidBasicMoveRule -down[#green]-|> PieceTypeSharedRules
IsNotAValidMoveRule -down[#green]-|> PieceTypeSharedRules

'-----'
'Notes'
'-----'
note right of QueenIsValidMoveRulesEngine {
    If a queen does not perform a friendly
    fire on one of its own pieces, if it's
    not jumping, if it doesn't create a check
    on its own king, but it does perform a
    valid basic move it is a valid move. Otherwise
    it's not a valid move.
}

@enduml
